# tutorial-datamecum

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/mlops_helpers/: __init__.py
src/mlops_helpers/preprocessing/: preprocess.py
src/mlops_helpers/training/: train.py
tests/: test_mlops_helpers.py
