[tool.poetry]
name = "mlops_helpers"
version = "0.3.0"
description = "This is a package for mlops"
authors = ["Daniel Ruiz"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
django = "^4.0.0"
fastapi = "0.87.0"
optuna = "~3.0.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
